[package]
edition.workspace = true
license.workspace = true
name = "helix-relay"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
askama.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
crossbeam-channel.workspace = true
dashmap.workspace = true
deadpool-postgres.workspace = true
ethereum_serde_utils.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
ethers.workspace = true
eyre.workspace = true
flate2.workspace = true
flux.workspace = true
futures.workspace = true
helix-common.workspace = true
helix-types.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
httpmock.workspace = true
hyper.workspace = true
mockito.workspace = true
moka.workspace = true
num-format.workspace = true
parking_lot.workspace = true
pin-project-lite.workspace = true
prost.workspace = true
rand.workspace = true
refinery.workspace = true
reqwest.workspace = true
reqwest-eventsource.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
serial_test.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
tikv-jemallocator.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tokio-tungstenite.workspace = true
tonic.workspace = true
tower.workspace = true
tower-http.workspace = true
tower_governor.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true
url.workspace = true
uuid.workspace = true
zstd.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true

[build-dependencies]
tonic-build.workspace = true
