[package]
edition.workspace = true
license.workspace = true
name = "helix-simulator"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-sol-types.workspace = true
async-trait.workspace = true
bytes.workspace = true
clap.workspace = true
dashmap.workspace = true
derive_more.workspace = true
futures.workspace = true
helix-types.workspace = true
jsonrpsee.workspace = true
metrics.workspace = true
reqwest.workspace = true
reth-chain-state.workspace = true
reth-ethereum.workspace = true
reth-ethereum-engine-primitives.workspace = true
reth-metrics.workspace = true
reth-node-builder.workspace = true
reth-primitives.workspace = true
reth-tasks.workspace = true
revm.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
