[package]
name = "helix-test-harness"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
axum.workspace = true
# no TLS: proxy is plain-http only, keeps musl builds free of C deps (aws-lc-sys)
reqwest = { version = "0.13.2", default-features = false, features = ["json"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
