[package]
edition.workspace = true
license.workspace = true
name = "helix-types"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types.workspace = true
ethereum_serde_utils.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
lh-bls.workspace = true
lh-eth2.workspace = true
lh-kzg.workspace = true
lh-slot-clock.workspace = true
lh-test-random.workspace = true
lh-types.workspace = true
rand.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
ssz_types.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true

[dev-dependencies]
alloy-rpc-types.workspace = true
criterion.workspace = true

[[bench]]
harness = false
name = "blob_bundle"

[[bench]]
harness = false
name = "execution_payload"

[[bench]]
harness = false
name = "signed_bid_submission"
