[package]
name = "helix-utils"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Serialization and Data Format 
serde.workspace = true
serde_json.workspace = true
tree_hash = "0.6.0"
tree_hash_derive = "0.6.0"

# Ethereum Types
ethereum-consensus.workspace = true
reth-primitives.workspace = true

# Networking
http.workspace = true
reqwest.workspace = true
axum.workspace = true

backtrace.workspace = true
tracing.workspace = true