[package]
edition.workspace = true
license.workspace = true
name = "helix-utils"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-primitives.workspace = true
axum.workspace = true
backtrace.workspace = true
ethereum-consensus.workspace = true
http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true
uuid.workspace = true
