[package]
edition.workspace = true
license.workspace = true
name = "helix-website"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-primitives.workspace = true
askama.workspace = true
async-trait.workspace = true
axum.workspace = true
deadpool-postgres.workspace = true
helix-beacon-client.workspace = true
helix-common.workspace = true
helix-database.workspace = true
helix-datastore.workspace = true
helix-housekeeper.workspace = true
helix-types.workspace = true
helix-utils.workspace = true
num-format.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
